Revision history for Perl extension Log::Dispatch::FileRotate.

{{$NEXT}}
    - add "check_both" configuration option which allows the use of both time and
      size based rotation at the same time.  If either conditions require a
      rotation, a rotation will happen.  Default is false (previous behaviour).
      Thanks Emanuele Tomasi.  PR #6.

1.26 Tue May 09 2017
    - add SEE ALSO reference to Log::Dispath::File::Stamped (Thanks Karen
      Etheridge)

1.25 Mon Apr 10 2017
    - Fix test failures if the test suite is running as root user.

1.24 Tue Feb 14 2017
    - fix test failure on file-open-failure.t related to current locale
      setting.
    - improve fix to Date::Manip TZ deprecation warnings.

1.23 Thu Feb 09 2017
    - Issue a warning if the lockfile cannot be opened (Thanks KGOESS)
      [#63544]
    - Fix POD typo (Thanks Anirvan Chatterjee)

1.22 Thu Oct 06 2016
    - Fix minor POD error (Thanks Matthias Schmitz) [#47665]
    - Remove Log::Log4perl dependency.  The tests now use Log::Dispatch
      directly instead of going through Log4perl. [#55359]
    - Split out "no activity" test case into its own file
    - Use Dist::Zilla to build the dist
    - Move test.pl to t/basic.t
    - Allow "size" parameter to contain underscores such as 10_000_000
      (recognized as 10000000) [#41064]
    - Add a signature test (optional, skipped if Module::Signature is not
      installed and only run if TEST_SIGNATURE=1 is passed to make test)
    - Docs: fix synopsis reference to size parameter to make it clear that
      the size is in bytes, not megabytes.  [#88286]
    - Docs: fix synopsis usage to "name" (incorrect) instead of filename
      (correct)

1.21
    [REMOVED] - accidental release, bad dist.

1.20 Sat Oct 01 2016
    - Fix Date::Manip warnings about deprecated TZ config variable. If
      Date::Manip 6.x or later is installed we now use SetDate instead.

1.19 Tue Oct 21 2008