@@ -10,5 +10,8 @@ copyright_year = 2005
 -remove = NextRelease
 use_twitter = 1
 
+[RemovePrereqs]
+remove = Test::Signature
+
 [NextRelease]
 format = %-2v %{ccc MMM dd yyyy}d
